# simple_webbrowser

./: LICENSE  README.md  pyproject.toml
archive/0-0-4/: simple_webbrowser-0.0.4-py3-none-any.whl
archive/0-0-5/: simple_webbrowser-0.0.5-py3-none-any.whl
archive/0-0-6/: simple_webbrowser-0.0.6-py3-none-any.whl
archive/0-0-7/: simple_webbrowser-0.0.7-py3-none-any.whl
archive/0-1-2/: simple_webbrowser-0.1.2-py3-none-any.whl
archive/0-1-4/: simple_webbrowser-0.1.4-py3-none-any.whl
archive/0-2-1/: simple_webbrowser-0.2.1-py3-none-any.whl
archive/0-2-2/: simple_webbrowser-0.2.2-py3-none-any.whl
archive/YANKED/0-1-0/: simple_webbrowser-0.1.0-py3-none-any.whl
archive/YANKED/0-1-1/: simple_webbrowser-0.1.1-py3-none-any.whl
archive/YANKED/0-1-3/: simple_webbrowser-0.1.3-py3-none-any.whl
archive/YANKED/0-2-0/: simple_webbrowser-0.2.0-py3-none-any.whl
examples/: random_search.py
src/simple_webbrowser/: __init__.py  extras.py  simple_webbrowser.py  youtube.py  yt_downloader.py
