[build-system]
requires = ["hatchling", "pytube", "colorama"]
build-backend = "hatchling.build"

[project]
name = "simple_webbrowser"
version = "0.1.4"
authors = [
  { name="MF366", email="real_mf366@yahoo.com" },
]
description = "A better webbrowser. A WAAAY more simple webbrowser. Just. For. You."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MF366-Coding/simple_webbrowser"
"Bug Tracker" = "https://github.com/MF366-Coding/simple_webbrowser/issues"